# NewsAggregator

./: README.md  pyproject.toml
app/: db.py  models.py
app/db/: __init__.py  base.py  create_tables.py  crud.py  models.py
app/ingest/: anthropic.py  channels.txt  enrich.py  openai.py  pipeline.py  youtube.py
docker/: docker-compose.yml  example.environment.env
news_aggregator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: run_anthropic_surface.py  run_enrich.py  run_ingest.py  run_openai_surface.py  run_youtube_surface.py
