[project]
name = "news-aggregator"
version = "0.1.0"
description = "AI news aggregator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "openai>=2.17.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.46",
    "youtube-transcript-api>=1.2.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["db*", "scripts*"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
